add infra local for speed layer